--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "hamburger-react": "^2.5.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.4.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
